bruise template xhtml valid asual & ocean templates css fix (IE use sidebar text overflow)

--- a/templates/asual/asual.css
+++ b/templates/asual/asual.css
@@ -141,6 +141,7 @@ a:hover {
 #column {
 	width: 18em; 
 	float: right;
+    overflow: hidden;
 }
 #column div {
 	display: block;
